<resources>
    <string name="app_name">CafeOrder</string>
    <string name="logo_description">Logo of cafe</string>
    <string name="welcome">Welcome</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_password">Enter your Password</string>
    <string name="button_create_order">Create order</string>
    <string name="toast_message">Please, fill in all fields</string>

    <string-array name="options_of_coffee">
        <item>Espresso</item>
        <item>Americano</item>
        <item>Cappuccino</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>White Tea</item>
        <item>Green Tea</item>
        <item>Black Tea</item>
    </string-array>

</resources>
