<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/darkBlue"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_name"
        android:textColor="@color/lightGrey"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        android:textColor="@color/lightGrey"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:text="@string/button_create_order"
        android:textColor="@color/darkBlue"
        android:onClick="onClickCreateOrder"
        android:textSize="24dp" />
</LinearLayout>